Confirm escrow validity of a new Contract. Fix notification body null issue. Slide to save changes button. Other bug fixes and improvements.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Stacking Sats</string>
+    <string name="app_name">Stack Sats</string>
     <string name="title_home">Home</string>
     <string name="title_offer_setup">Offer Setup</string>
     <string name="title_settings">Settings</string>
